Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -153,8 +153,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def a():\n",
-    "    for i  "
+    "def a(terms):\n",
+    "    for i in terms:\n",
+    "        "
    ]
   },
   {
