Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,9 @@
    "outputs": [],
    "source": [
     "def a(terms):\n",
+    "    x=0\n",
     "    for i in terms:\n",
+    "        x+=ter\n",
     "        "
    ]
   },
