Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -153,10 +153,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def a(terms):\n",
+    "def a(terms,x):\n",
     "    x=0\n",
     "    for i in terms:\n",
-    "        x+=ter\n",
+    "        x+=term[0]*x\n",
     "        "
    ]
   },
