Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,8 @@
     "def a(terms,x):\n",
     "    x=0\n",
     "    for i in terms:\n",
-    "        x+=term[0]*x\n",
+    "        x+=term[0]*x**term[1]\n",
+    "        \n",
     "        "
    ]
   },
